Description
Theme - Hacker XP - Fonts - is not the right color of the desktop shortcut menu
Double text is visible.
Inactive entries in the menu in ReactOS have a double color:
Not the right color 00ff00 - green
Correct color: aca899
Duplicate text of green color should be removed.
Attachments
Issue Links
- blocks
-
CORE-12285 Reactos Theming Issues [Themes / Theme-ing / Themeing]
-
- Untriaged
-
- relates to
-
CORE-14196 Themes - Luna, AquaGT - Fonts - is not the right color of the desktop shortcut menu
-
- Resolved
-
-
CORE-14238 Classic theme preview incorrectly displays disabled menu text color
-
- Resolved
-
-
CORE-14243 Theme - Windows Xp Style Wood - Fonts - is not the right color of the desktop shortcut menu
-
- Untriaged
-
- links to