[WIN32K:NTUSER] Fix color indices for themes

CORE-14231 #resolve